syntax = "proto2";

import "hedwig/protobuf/options.proto";

package tests.bad3;

message TripCreatedV1 {
  option (hedwig.message_options).major_version = 2; // error: mismatch

  required string device_id = 1;
}

message TripCreatedV2 {
  option (hedwig.message_options).major_version = 2;

  required string vehicle_id = 1;
}

message DeviceCreatedV1 {
  option (hedwig.message_options).major_version = 1;

  required string device_id = 1;
}

message VehicleCreatedV1 {
  option (hedwig.message_options).major_version = 1;

  required string vehicle_id = 1;
}
